------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------

[jan] Add Horde_Prefs#getScopeObject().


------
v2.8.1
------

[jan] Fix PostgreSQL backend with newer Horde_Db version.


------
v2.8.0
------

[jan] Use more efficient database access in SQL backend.
[jan] Fix and optimize removing preferences for a single application.
[jan] Add Horde_Prefs::removeAll().


------
v2.7.6
------

[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).
[jan] Mark PHP 7 as supported.


------
v2.7.5
------

[jan] Improve Oracle compatibility.


------
v2.7.4
------

[jan] Updated UK translation.


------
v2.7.3
------

[jan] Fix issues with certain locales like Turkish.


------
v2.7.2
------

[mms] Removed unused 'password' parameter.


------
v2.7.1
------

[mms] Fix Horde_Prefs#isDefault() to return true if the given pref name doesn't
      exist in a scope.


------
v2.7.0
------

[mms] Add ArrayAccess, Countable, and Iterator functionality to the
      Horde_Prefs_Identity object.


------
v2.6.0
------

[mms] Add Horde_Prefs#getCache().
[mms] Add Horde_Cache based cache driver.
[mms] Pref scopes are now loaded on-demand.
[mms] Add Horde_Prefs#changeScope().


------
v2.5.2
------

[mms] Correct fix for iteration of Horde_Prefs_Scope object.


------
v2.5.1
------

[mms] Fix iteration of Horde_Prefs_Scope object.


------
v2.5.0
------

[mms] Add ability to override locked pref status when setting value via
      Horde_Prefs#setValue().


------
v2.4.1
------

[mms] Fix removing prefs from storage backends (Bug #12208).
[mms] Fix fatal error in Horde_Prefs_Scope#valid().


------
v2.4.0
------

[mms] Add MongoDB storage driver.
[mms] Fix removing preference from backend (Bug #12207).
[mms] More compact internal/serialized representation of data in
      Horde_Prefs_Scope.


------
v2.3.2
------

[jan] Improve unit tests.