@@ -2,7 +2,8 @@
 v3.0.0alpha4
 ------------
 
-
+[rla] Make horde-prefs cli composer-ready and compatible with horde config.
+|+
 
 
 ------------
